# castle-defense-game

./: CMakeLists.txt  LICENSE  README.md
include/: castle.h  drawable_ops.h  enemy_wave.h  entity.h  file_reader.h  freetype_renderer.h  freetype_text.h  game_control.h  global_decl.h  global_defs.h  graphics.h  graphics_defs.h  health_bar.h  hud.h  key_bindings.h  lin_alg.h  obj_registry.h  physics.h  player.h  player_controls.h  static_env.h  tower.h  utils.h
include/container/: list.h
include/glad/: glad.h
include/map/: initial_map.h  map_mgr.h
lib/: glfw3.lib
res/: fragment_source.TXT  vertex_source.TXT
res/static/shaders/: basic_frag.txt  basic_vert.txt  entity_frag.txt  entity_vert.txt  field_frag.txt  field_vert.txt  freetype_text_frag.txt  health_bar_frag.txt  quad_frag.TXT  text_vert.txt
src/: castle.c  drawable_ops.c  enemy_wave.c  entity.c  file_reader.c  freetype_renderer.c  freetype_text.c  game_control.c  glad.c  graphics.c  health_bar.c  hud.c  lin_alg.c  main.c  obj_registry.c  physics.c  player.c  player_controls.c  static_env.c  tower.c  utils.c
src/container/: list.c
src/map/: initial_map.c  map_mgr.c
